src/serve/tests/requests/create/snapshots/basiliq__serve__tests__requests__create__relationships__multi_rel_m2m.snap
---
source: basiliq/src/serve/tests/requests/create/relationships.rs
expression: res

---
{
  "jsonapi": {
    "version": "1.0"
  },
  "data": {
    "type": "public__articles",
    "id": "[uuid]",
    "attributes": {
      "body": "Holaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
      "title": "Hallo!"
    }
  }
}
